# pip-blame

./: pip_blame.py  pyproject.toml  readme.md
