[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
authors = [{name = "banteg"}]
dependencies = [
  "packaging >=24",
  "requests >=2.31",
  "rich >=13.7.1",
]
description = "finds packages that prevent upgrading a transitive dependency"
name = "pip-blame"
readme = 'readme.md'
requires-python = ">=3.8"
version = "0.2.4"
home-page = "https://github.com/banteg/pip-blame"

[tool.flit.module]
name = "pip_blame"

[project.urls]
Source = "https://github.com/banteg/pip-blame"

[project.scripts]
pip-blame = "pip_blame:main"
